# callejerosantanderquizz

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deployment_guide.md  download_streets.py  graph.json  pyproject.toml  quiz.json  street_quiz_from_geojson.py  streets_santander_muni.geojson
app/: database.py  dependencies.py  main.py  models.py  schemas.py
app/core/: config.py
app/routers/: quiz.py  users.py
app/services/: auth.py  callejero.py  question_generator.py
data/: callejero_santander.json  santander_boundary.geojson
static/: app.js  index.html  style.css
tests/: test_question_generator.py  test_users.py
tests/data/: sample_callejero_tramos.json
