[project]
name = "callejerosantanderquizz"
version = "0.1.0"
description = "Backend for Callejero Santander Quizz mobile app"
authors = [{name = "Callejero Santander", email = "info@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5.0.0",
    "python-dateutil>=2.9.0.post0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
callejerosantanderquizz = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["test"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
osmnx = ">=2.1.0,<3"
geopandas = ">=1.1.3,<2"
networkx = ">=3.6.1,<4"
shapely = ">=2.1.2,<3"
psycopg2-binary = ">=2.9.10,<3"
pre-commit = ">=4.6.0,<5"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
disable_error_code = ["arg-type", "operator"]

[[tool.mypy.overrides]]
module = "app.models"
ignore_errors = true
